force-app/main/default/objects/MSA_Membership_Tier__c/MSA_Membership_Tier__c.object-meta.xml
<CustomObject>
    <description>This object stores the details of membership tiers like platinum, gold and silver</description>
    <label>MSA Membership Tier</label>
    <nameField>
        <label>MSA Membership Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSA Membership Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>