force-app/main/default/objects/MSA_Membership_Tier__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed information or description of the membership tier.</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>